Module 5 Assignment Final

--- a/Module 5/Pages/Index.cshtml
+++ b/Module 5/Pages/Index.cshtml
@@ -1,10 +1,17 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Ryan's Pittsburgh Steelers History Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">The Beginning</h1>
+    <h1 class="display-4">The Steel Curtain</h1>
+    <h1 class="display-4" >The Drought</h1>
+    <h1 class="display-4">The Steel Curtain II</h1>
+    <h1 class="display-4">The Drought II</h1>
+    <p>This is my first Webapp</a>.</p>
 </div>
+<body>
+    <h1></h1>
+</body>
