--- a/Module 5/wwwroot/css/site.css
+++ b/Module 5/wwwroot/css/site.css
@@ -1,22 +1,79 @@
+:root {
+  --steelers-black: #000000;
+  --steelers-gold: #FFB612;
+  --steelers-white: #FFFFFF;
+  --steelers-accent: #258cfb; /* Keeping your accent color for focus states */
+}
+
 html {
   font-size: 14px;
+  background-color: var(--steelers-black);
+  color: var(--steelers-gold);
 }
 
 @media (min-width: 768px) {
   html {
-    font-size: 16px;
+      font-size: 16px;
   }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
 }
 
 body {
   margin-bottom: 60px;
+  background-color: var(--steelers-black);
+  color: var(--steelers-gold);
+}
+
+.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+  box-shadow: 0 0 0 0.1rem var(--steelers-white), 0 0 0 0.25rem var(--steelers-accent);
+}
+
+.btn, .btn-link.nav-link {
+  background-color: var(--steelers-gold);
+  color: var(--steelers-black);
+  border-color: var(--steelers-white);
+}
+
+.btn:hover, .btn-link.nav-link:hover {
+  background-color: var(--steelers-white);
+  color: var(--steelers-black);
+  border-color: var(--steelers-gold);
+}
+
+a, a:visited {
+  color: var(--steelers-gold);
+}
+
+a:hover, a:focus {
+  color: var(--steelers-white);
+}
+
+.navbar {
+  background-color: var(--steelers-gold);
+  color: var(--steelers-black);
+}
+
+.navbar a, .navbar a:visited {
+  color: var(--steelers-black);
+}
+
+.navbar a:hover {
+  color: var(--steelers-white);
+}
+
+.footer {
+  background-color: var(--steelers-black);
+  color: var(--steelers-gold);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px; /* Vertically center the text */
+}
+
+.footer a, .footer a:visited {
+  color: var(--steelers-gold);
+}
+
+.footer a:hover {
+  color: var(--steelers-white);
 }
